<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/btnElemento"
    android:layout_width="match_parent"
    android:layout_height="?android:attr/listPreferredItemHeightLarge"
    tools:context="com.example.notas.Adapters.notaViewHolder">

    <!-- Para poner un borde abajo... -->

    <View
        android:id="@+id/view1"
        android:layout_width="fill_parent"
        android:layout_height="3dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/grisaceo" />

    <ImageView
        android:id="@+id/img_nota"
        android:layout_width="60dp"
        android:layout_height="1000dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="17dp"
        android:layout_marginTop="7dp"
        android:contentDescription="@string/descripcion"
        android:src="@android:drawable/btn_radio" />

    <TextView
        android:id="@+id/id_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="98dp"
        android:layout_marginTop="11dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/titulo"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/id_fecha"
        android:layout_width="227dp"
        android:layout_height="25dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="7dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/fecha"
        android:textColor="@color/colorRojo"
        android:textSize="18sp" />

</RelativeLayout>